log_output/manifests/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-busybox
  namespace: exercises
  labels:
    app: my-busybox
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
