log_output/manifests/log-output-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
        - name: config
          configMap:
            name: log-output-configmap
      containers:
        - name: log-output
          image: joveful/log-writer1
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
        - name: log-server
          image: joveful/log-server5
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
          - name: config
            mountPath: /etc/config
