log_output/manifests/pingpong-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: pingpong
          image: joveful/pingpong2
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
